# cursedcontainer

./: Cargo.toml  README.md  README.tpl
.github/workflows/: test.yml
src/: lib.rs
